Platforms/VivadoFPGA/vivadohls_code/hls_prj/F3_VivadoHLS_core/csim/report/vivado_activity_thread_csim.log
make[1]: Entering directory `/home/ee/s/sf306/ForwardFinancialFramework/Platforms/VivadoFPGA/vivadohls_code/hls_prj/F3_VivadoHLS_core/csim/build'
   Compiling(apcc) ../../../../srcs/tb.c in debug mode
@I [HLS-10] Running '/mnt/cas_nfs/applications/Xilinx/Vivado_HLS/2013.4/bin/unwrapped/lnx64.o/apcc'
            for user 'sf306' on host 'ee-boxer0.ee.ic.ac.uk' (Linux_x86_64 version 2.6.32-41-server) on Thu Apr 10 23:26:35 BST 2014
            in directory '/home/ee/s/sf306/ForwardFinancialFramework/Platforms/VivadoFPGA/vivadohls_code/hls_prj/F3_VivadoHLS_core/csim/build'
../../../../srcs/tb.c:30:40: error: unknown type name 'thread_data_t'; did you mean 'pthread_attr_t'?
void opencl_montecarlo_activity_thread(thread_data_t * thread_arg){
                                       ^~~~~~~~~~~~~
                                       pthread_attr_t
/usr/include/bits/pthreadtypes.h:57:3: note: 'pthread_attr_t' declared here
} pthread_attr_t;
  ^
../../../../srcs/tb.c:32:2: error: use of undeclared identifier 'thread_data_t'; did you mean 'thread_paths'?
        thread_data_t* temp_data;
        ^~~~~~~~~~~~~
        thread_paths       
../../../../srcs/tb.c:28:5: note: 'thread_paths' declared here
int thread_paths,i,j;
    ^
../../../../srcs/tb.c:32:17: error: use of undeclared identifier 'temp_data'
        thread_data_t* temp_data;
                       ^
../../../../srcs/tb.c:33:2: error: use of undeclared identifier 'temp_data'
        temp_data = (thread_data_t*) thread_arg;
        ^
../../../../srcs/tb.c:33:15: error: use of undeclared identifier 'thread_data_t'
        temp_data = (thread_data_t*) thread_arg;
                     ^
../../../../srcs/tb.c:33:29: error: expected expression
        temp_data = (thread_data_t*) thread_arg;
                                   ^
../../../../srcs/tb.c:34:32: error: use of undeclared identifier 'temp_data'
        underlying_attributes u_a_0 = temp_data->u_a_0;
                                      ^
../../../../srcs/tb.c:36:28: error: use of undeclared identifier 'temp_data'
        option_attributes o_a_0 = temp_data->o_a_0;
                                  ^
../../../../srcs/tb.c:44:12: error: use of undeclared identifier 'temp_data'
        for(k=0;k<temp_data->thread_paths;++k){
                  ^
../../../../srcs/tb.c:52:13: error: use of undeclared identifier 'temp_data'
                for(j=0;j<temp_data->path_points;++j){
                          ^
../../../../srcs/tb.c:69:2: error: use of undeclared identifier 'temp_data'
        temp_data->thread_result = temp_total_0;
        ^
../../../../srcs/tb.c:70:2: error: use of undeclared identifier 'temp_data'
        temp_data->thread_result_sqrd = temp_total_sqrd_0;
        ^
../../../../srcs/tb.c:105:2: error: use of undeclared identifier 'thread_data_t'; did you mean 'thread_paths'?
        thread_data_t temp_data[threads];
        ^~~~~~~~~~~~~
        thread_paths       
../../../../srcs/tb.c:28:5: note: 'thread_paths' declared here
int thread_paths,i,j;
    ^
../../../../srcs/tb.c:105:15: error: expected ';' after expression
        thread_data_t temp_data[threads];
                     ^
                     ;       
../../../../srcs/tb.c:105:16: error: use of undeclared identifier 'temp_data'
        thread_data_t temp_data[threads];
                      ^
../../../../srcs/tb.c:107:3: error: use of undeclared identifier 'temp_data'
                temp_data[i].thread_paths = thread_paths;
                ^
../../../../srcs/tb.c:108:3: error: use of undeclared identifier 'temp_data'
                temp_data[i].path_points = default_points;
                ^
../../../../srcs/tb.c:109:3: error: use of undeclared identifier 'temp_data'
                temp_data[i].thread_result= 0;//(FP_t*)malloc(1*sizeof(FP_t));
                ^
../../../../srcs/tb.c:110:3: error: use of undeclared identifier 'temp_data'
                temp_data[i].thread_result_sqrd= 0;//(FP_t*)malloc(1*sizeof(FP_t));
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
@E [APCC-1-1] clang compile failed: child process exited abnormally
@E [APCC-1] ProcessSources failed
@I [APCC-3] Tmp directory is /tmp/apcc_db_sf306/51701397168795974137
@E [APCC-1] APCC failed.
make[1]: Leaving directory `/home/ee/s/sf306/ForwardFinancialFramework/Platforms/VivadoFPGA/vivadohls_code/hls_prj/F3_VivadoHLS_core/csim/build'
make[1]: *** [obj/tb.o] Error 1
@E [SIM-1] 'csim_design' failed: compilation error(s).
